@@ -6,20 +6,19 @@ import java.util.ArrayList;
 import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
+    private static final int MAX_HISTORY_SIZE = 10;
     private List<Task> history = new ArrayList<>();
 
     @Override
     public void add(Task task) {
-        if (history.size() <= 10) {
-            history.add(task);
-        } else {
-            history.removeFirst();
-            history.add(task);
+        if (history.size() >= MAX_HISTORY_SIZE) {
+            history.remove(0); // Удаляем первый элемент истории
         }
+        history.add(task);
     }
 
     @Override
     public List<Task> getHistory() {
-        return history;
+        return new ArrayList<>(history);
     }
 }
